Small alignment fixes

--- a/assets/less/_navbar.less
+++ b/assets/less/_navbar.less
@@ -138,7 +138,11 @@
 //
 // Styleguide components.megamenu
 
-
+.navbar {
+  @media(max-width: @screen-md-min){
+    margin-bottom: 0;
+  }
+}
 .navbar-mega {
   .navbar-default;
   .megamenu();
@@ -180,14 +184,21 @@
     position: static;
   }
 
+
   .navbar-header {
     float: left;
     .navbar-brand {
       padding: 15px 5px;
+      padding-top: 13.19px;
       > img {
         max-height: 69px;
         margin-top: -9px;
 //        max-width: 190px;
+      }
+      @media (max-width: 1067px){
+        padding-top: 22px;
+        padding-bottom: 22px;
+        max-width: 217px;
       }
     }
   }
